# nlp

./: .gitignore  README.md  pyproject.toml
language_similarity/lingmap/: README.md  main.ipynb  pyproject.toml
machine_translation/fairseq_mt/: README.md  fairseq_evaluate.bash  fairseq_preprocess.bash  fairseq_train.bash  pyproject.toml  stable_setup.bash  transfer.py  transformer_patch.bash
machine_translation/fairseq_mt/evaluation/bpe-ceb-tgl/: generate-test.txt  hypotheses.txt  references.txt  sources.txt  train_src_dest.bash
machine_translation/fairseq_mt/evaluation/unigram-ceb-tgl-1k/: generate-test.txt  hypotheses.txt  train_src_dest.bash
machine_translation/fairseq_mt/evaluation/unigram-ceb-tgl-4k/: generate-test.txt  hypotheses.txt  sources.txt  train_src_dest.bash
machine_translation/fairseq_mt/evaluation/unigram-label-eng-(tgl,ceb)/: train_src_dest.bash
machine_translation/fairseq_mt/evaluation/unigram-label-eng-(tgl,ceb)2/: train_src_dest.bash  unigram-eng-(tgl,ceb)2-OUT.txt
machine_translation/fairseq_mt/evaluation/unigram-label-pivot-ceb-eng/: OUT.txt
machine_translation/fairseq_mt/evaluation/unigram-label-pivot-eng-tgl/: OUT.txt
machine_translation/fairseq_mt/scripts/: fairseq_eval_pivot.bash  fairseq_evaluate.bash  fairseq_main.bash  fairseq_main_augmentation.bash  fairseq_main_pivot.bash  fairseq_preprocess.bash  fairseq_train.bash  sanity_check.py  sanity_check_out.txt
machine_translation/fairseq_mt/scripts/interact/: interact-src-dest.bash  train-src-dest.bash  (+1 more)
machine_translation/fairseq_mt/tests/: input_tgl.txt  output_ceb.txt
(+14622 files in other folders)
